[gd_scene load_steps=22 format=3 uid="uid://biptk6b2dxe82"]

[ext_resource type="Texture2D" uid="uid://cundwu3y0f2xy" path="res://art/tiles/woodFloor.png" id="1_im4b4"]
[ext_resource type="Script" path="res://levels/cutscenes/cutscene_0.gd" id="1_p88b0"]
[ext_resource type="Texture2D" uid="uid://ch1rf1ke40l01" path="res://art/tiles/woodFloor2.png" id="2_4wkrd"]
[ext_resource type="Texture2D" uid="uid://datqdw2aa1x5y" path="res://art/tiles/woodFloor3.png" id="3_1xd78"]
[ext_resource type="PackedScene" uid="uid://cvoqpphfwhe1j" path="res://player/player.tscn" id="4_x7arf"]
[ext_resource type="PackedScene" uid="uid://nisv73ya1rpt" path="res://objects/wall.tscn" id="5_6upav"]
[ext_resource type="PackedScene" uid="uid://cii2aipbuxwjh" path="res://objects/entrance.tscn" id="7_m0yd5"]
[ext_resource type="Texture2D" uid="uid://djm2j8mey2xgp" path="res://art/npc/ghost/ghost_Fall.png" id="8_tbnab"]
[ext_resource type="Texture2D" uid="uid://co8gx6mrq7dqg" path="res://art/npc/ghost/ghost_Upright.png" id="9_mil37"]
[ext_resource type="PackedScene" uid="uid://b8mseffkqj6pe" path="res://objects/exit.tscn" id="10_236ba"]
[ext_resource type="Texture2D" uid="uid://bbcj2hsjl5w4y" path="res://art/npc/ghost/ghost_tiltLeft.png" id="10_l0ann"]
[ext_resource type="Texture2D" uid="uid://lqsrol20a2ni" path="res://art/npc/ghost/ghost_tiltRight.png" id="11_1p7rh"]
[ext_resource type="PackedScene" uid="uid://csejredakcle5" path="res://screens/scene_transition_rect.tscn" id="11_xr8gq"]
[ext_resource type="AudioStream" uid="uid://bgjarfnujopid" path="res://sound/ghost/floor_break.mp3" id="14_nb78y"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wvv3a"]
texture = ExtResource("1_im4b4")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rjf7a"]
texture = ExtResource("2_4wkrd")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5itqb"]
texture = ExtResource("3_1xd78")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_qvppb"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_wvv3a")
sources/1 = SubResource("TileSetAtlasSource_rjf7a")
sources/2 = SubResource("TileSetAtlasSource_5itqb")

[sub_resource type="SpriteFrames" id="SpriteFrames_he2ii"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_tbnab")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_mil37")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_l0ann")
}],
"loop": true,
"name": &"lean_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_1p7rh")
}],
"loop": true,
"name": &"lean_right",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_dcqp7"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fadbh"]
gradient = SubResource("Gradient_dcqp7")
width = 260
height = 200
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.9, 0.1)
metadata/_snap_enabled = true

[node name="Main" type="Node2D"]
script = ExtResource("1_p88b0")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_qvppb")
format = 2
layer_0/tile_data = PackedInt32Array(-65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 1, 0, -131069, 1, 0, -65533, 1, 0, 3, 0, 0, 2, 0, 0, 1, 0, 0, 0, 2, 0, 65535, 0, 0, 65534, 0, 0, 65533, 1, 0, 65532, 2, 0, -4, 1, 0, -65540, 0, 0, -3, 1, 0, -2, 2, 0, -1, 0, 0, -65536, 1, 0, -65535, 1, 0, -131068, 2, 0, -65532, 0, 0, 4, 0, 0, -65534, 2, 0, -65541, 2, 0, -5, 0, 0, 65531, 0, 0, -131078, 0, 0, -131077, 0, 0, -131076, 0, 0, -131075, 0, 0, -131074, 0, 0, -131073, 0, 0, -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 0, 0, -131067, 0, 0, -65531, 0, 0, 5, 0, 0, 65541, 0, 0, 65540, 0, 0, 65539, 0, 0, 65538, 0, 0, 65537, 0, 0, 65536, 0, 0, 131071, 0, 0, 131070, 0, 0, 131069, 0, 0, 131068, 0, 0, 131067, 0, 0, 131066, 0, 0, 65530, 0, 0, -6, 0, 0, -65542, 0, 0)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -32)
zoom = Vector2(1.5, 1.5)

[node name="Player" parent="." instance=ExtResource("4_x7arf")]
position = Vector2(-320, -64)
pause_input = true

[node name="Environment" type="Node2D" parent="."]

[node name="Walls" type="Node2D" parent="Environment"]

[node name="BoundaryWalls" type="Node2D" parent="Environment/Walls"]

[node name="Wall2" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(-384, 64)

[node name="Wall3" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(-320, 64)

[node name="Wall4" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(-256, 64)

[node name="Wall5" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(-192, 64)

[node name="Wall6" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(-128, 64)

[node name="Wall7" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(-64, 64)

[node name="Wall8" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(0, 64)

[node name="Wall9" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(64, 64)

[node name="Wall10" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(128, 64)

[node name="Wall11" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(192, 64)

[node name="Wall12" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(256, 64)

[node name="Wall13" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(320, 64)

[node name="Wall14" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(320, 0)

[node name="Wall16" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(320, -128)

[node name="Wall17" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(320, -192)

[node name="Wall18" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(256, -192)

[node name="Wall19" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(192, -192)

[node name="Wall20" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(128, -192)

[node name="Wall21" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(64, -192)

[node name="Wall22" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(0, -192)

[node name="Wall23" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(-64, -192)

[node name="Wall24" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(-128, -192)

[node name="Wall25" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(-192, -192)

[node name="Wall26" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(-256, -192)

[node name="Wall27" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(-320, -192)

[node name="Wall28" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(-384, -192)

[node name="Wall29" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(-384, -128)

[node name="Wall31" parent="Environment/Walls/BoundaryWalls" instance=ExtResource("5_6upav")]
position = Vector2(-384, 0)

[node name="InsideWalls" type="Node2D" parent="Environment/Walls"]

[node name="Entrance" parent="Environment/Walls" instance=ExtResource("7_m0yd5")]
position = Vector2(-384, -64)

[node name="Pushables" type="Node2D" parent="Environment"]

[node name="Holes" type="Node2D" parent="Environment"]

[node name="Plates" type="Node2D" parent="Environment"]

[node name="Gates" type="Node2D" parent="Environment"]

[node name="Exit" type="Node2D" parent="Environment"]

[node name="Exit" parent="Environment/Exit" instance=ExtResource("10_236ba")]
position = Vector2(320, -64)
levelName = "cutscenes/cutscene_1"

[node name="HUD" type="CanvasLayer" parent="."]

[node name="SceneTransitionRect" parent="HUD" instance=ExtResource("11_xr8gq")]

[node name="Ghost" type="AnimatedSprite2D" parent="."]
position = Vector2(192, -64)
sprite_frames = SubResource("SpriteFrames_he2ii")
animation = &"idle"
offset = Vector2(32, 32)
flip_h = true

[node name="GhostAudio" type="AudioStreamPlayer2D" parent="."]
position = Vector2(192, -64)
volume_db = 10.0
max_distance = 500.0
bus = &"SFX"

[node name="FloorAudio" type="AudioStreamPlayer2D" parent="."]
position = Vector2(192, -64)
stream = ExtResource("14_nb78y")
volume_db = 5.0
max_distance = 500.0
bus = &"SFX"

[node name="LightTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="AudioTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Lighting" type="Node2D" parent="."]

[node name="CanvasModulate" type="CanvasModulate" parent="Lighting"]
color = Color(0, 0, 0, 1)

[node name="Lights" type="Node2D" parent="Lighting"]

[node name="PointLight2D4" type="PointLight2D" parent="Lighting/Lights"]
position = Vector2(-1.14441e-05, 39.68)
scale = Vector2(3.44615, 2.24)
energy = 1.5
texture = SubResource("GradientTexture2D_fadbh")
offset = Vector2(0, -32)

[connection signal="timeout" from="LightTimer" to="." method="_on_light_timer_timeout"]
[connection signal="timeout" from="AudioTimer" to="." method="_on_audio_timer_timeout"]
